cluster/network/omada/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: omada-controller
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`omada.k.lanquarden.com`)
      services:
        - name: omada-controller
          port: 8043
          scheme: https
  tls:
    secretName: omada-controller-cert
